clap_derive/tests/ui/default_value_wo_value_removed.stderr
error: `#[clap(default_value)` attribute (without a value) has been replaced by `#[clap(default_value_t)]`.

  = help: Change the attribute to `#[clap(default_value_t)]`

  --> $DIR/default_value_wo_value_removed.rs:14:12
   |
14 |     #[clap(default_value)]
   |            ^^^^^^^^^^^^^
